--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@clerk/nextjs": "^6.36.3",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
