--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.3.1",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.3.1"
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
